@@ -185,6 +185,9 @@ z80_bit fast_autoload={0};
 //Suprimir pausas de los archivos tzx
 z80_bit tzx_suppress_pause={0};
 
+//Nuevo algoritmo de carga real tape
+z80_bit realtape_algorithm_new={0};
+
 
 //
 // Audio Settings
