@@ -141,6 +141,7 @@ extern int tape_block_pzx_save(void *dir,int longitud);
 extern void tape_block_pzx_begin_save(int longitud,z80_byte flag);
 extern void realtape_pause_unpause(void);
 extern int realtape_get_current_bit_playing(void);
+extern int realtape_algorithm_new_noise_reduction;
 
 
 #endif
