@@ -4,6 +4,7 @@ Added Sega Master System emulation
 Added .sms file viewer
 Added setting to disable TZX pauses
 Added midi output and .mid support for QL and SN audio chips (Master System, SG1000, etc)
+Added new improved real tape loading algorithm
 
 
 Improved ZX Vision menu interface:
